# pro-yams-ai

./: .dockerignore  .gitignore  01_project_scaffolding_cmake.md  02_game_engine_core (1).md  03_game_flow.md  04_solver_precomputed_tables.md  05_solver_heuristic (1).md  06_state_tensor.md  07_neural_network.md  08_solver_nn_async.md  09_replay_buffer_training (3).md  10_evaluation_system (1).md  11_configuration_management (1).md  12_ui (1).md  13_docker_deployment.md  14_mc_rollout_bot.md  15_pro_yams_distil.md  2v2_variant.md  2v2migration.md  2v2migration_remaining.md  CMakeLists.txt  benchmark_results_new_tensor  eval_log.csv  fable_report.md  ideas.md  known_bugs.md  pro yams.md  pro_yams_2v2.md  pro_yams_ai_high_level_design (3).md  results.md  run_and_format_benchmarks.py  temp_game.txt  training_log.csv  usage.md
.claude/: settings.local.json
config/: ab_control_sprint.yaml  ab_fast.yaml  ab_lambda95.yaml  ab_mc.yaml  ab_td0.yaml  ab_wide.yaml  default.yaml  test_lambda95_1m.yaml  test_mc_100k.yaml  test_mc_300k.yaml  test_normal_1m.yaml  test_resnet_100k.yaml  test_resnet_fast.yaml  test_td0_100k.yaml  test_td0_100kv2.yaml  test_td0_600k.yaml  test_tdl_100k.yaml  test_tdl_300k.yaml  test_timing.yaml  test_wide_1m.yaml
config/2v2/: seed_baseline_10k.yaml  test_timing.yaml
config/distil/: heuristic_v14_2v2.yaml  heuristic_v14_mse_2v2.yaml  heuristic_v16_2v2.yaml  heuristic_v16_mse_2v2.yaml  heuristic_v2_1v1.yaml
config/mlp-256/: bot_consolidate.yaml  seed.yaml  selfplay.yaml  selfplay10.yaml  selfplay2.yaml  selfplay3.yaml  selfplay4.yaml  selfplay5.yaml  selfplay6.yaml  selfplay7.yaml  selfplay8.yaml  selfplay9.yaml
config/mlp-256-wo/: seed.yaml
config/mlp-512/: seed.yaml
config/resnet/: seed.yaml
docker/: Dockerfile  docker-compose.yml
golden-out/: coverage.md
scratch/: analyze_first_layer_l1.py  check_traj.py  replace.py  replace2.py  replace3.py  verify_grid_script.sh
scratch/hp10k/: analyze.py  make_config.py  run_one.py  runs.sh  summarize.py  sweep.sh  sweep2.sh  sweep3.sh
scripts/: eval.sh  grid_search_gps.sh  grid_search_lr.sh  grid_search_lr_test.sh  train.sh  ui.sh
src/: main.cpp
src/config/: CMakeLists.txt  app_config.h  config_loader.cc  config_loader.h  config_printer.cc  config_printer.h  config_validator.cc  config_validator.h  placeholder.cc
src/distil/: CMakeLists.txt  convergence.h  distil_config.h  distil_loop.cc  distil_loop.h  distil_orchestrator.cc  distil_orchestrator.h  distil_resume.cc  distil_resume.h  distil_worker.cc  distil_worker.h  replay_buffer.cc  replay_buffer.h  shuffle_queue.cc  shuffle_queue.h  teacher.h  teacher_heuristic.cc  teacher_heuristic.h  teacher_nn.cc  teacher_nn.h
src/engine/: CMakeLists.txt  board_init.cc  board_init.h  board_state.h  constants.h  context_rebuild.cc  context_rebuild.h  duel.cc  duel.h  game_context.h  game_flow.cc  game_flow.h  game_rules.cc  game_rules.h  game_state.h  game_traits.h  legal_moves.cc  legal_moves.h  placeholder.cc  placement.cc  placement.h  probability_tables.h  rng.cc  rng.h  scoring.cc  scoring.h  solver_tables.cc  solver_tables.h  tensor.cc  tensor.h
src/eval/: CMakeLists.txt  (+7 more)
src/self_play/: CMakeLists.txt  batch_manager.cc  batch_manager.h  coordinator.cc  coordinator.h  debug_stats.h  game_instance.h  game_queues.cc  game_queues.h  orchestrator.cc  orchestrator.h  placeholder.cc  training_data.cc  training_data.h  worker.cc  worker.h
src/solver/: CMakeLists.txt  dp_eval.cc  dp_eval.h  dp_tables.cc  dp_tables.h  dp_tables_compute.cc  dp_tables_internal.h  mc_bot.cc  mc_bot.h  placeholder.cc  precomputed_tables.cc  precomputed_tables.h  solver.cc  solver.h
src/tools/: CMakeLists.txt  golden_gen.cc
src/ui/: CMakeLists.txt  game_recorder.cc  game_recorder.h  game_session.h  json_serialization.cc  json_serialization.h  play_main.cpp  server.cc  server.h  session_manager.cc  session_manager.h  ui_main.cpp
src/ui/play_static/: index.html
src/ui/play_static/css/: style.css
src/ui/play_static/js/: api.js  play.js
src/ui/static/: index.html
src/ui/static/css/: style.css
src/ui/static/js/: api.js  app.js  board.js  comparison.js  dashboard.js  debug.js  game.js  games.js  position.js  tensor.js  tournament.js
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt  engine_bench.cc  eval_bench.cc  model_bench.cc  self_play_bench.cc  solver_bench.cc  tensor_bench.cc  training_bench.cc
tests/config/: CMakeLists.txt  config_loader_test.cc  config_printer_test.cc  config_validator_test.cc
tests/distil/: CMakeLists.txt  convergence_test.cc  distil_loop_test.cc  distil_resume_test.cc  final_report_test.cc  replay_buffer_test.cc  shuffle_queue_test.cc  teacher_heuristic_test.cc  teacher_nn_test.cc  test_tables.h
tests/engine/: CMakeLists.txt  context_rebuild_test.cc  duel_2v2_test.cc  duel_test.cc  engine_smoke_test.cc  full_game_test.cc  game_flow_test.cc  game_traits_test.cc  golden_rule_teammate_test.cc  init_test.cc  legal_moves_test.cc  placement_test.cc  probability_table_test.cc  rng_test.cc  scoring_test.cc  solver_tables_test.cc  tensor_batch_test.cc  tensor_rotation_test.cc  tensor_test.cc  turbo_test.cc  yams_bonus_test.cc
tests/eval/: CMakeLists.txt  eval_game_test.cc  eval_logging_test.cc  evaluator_test.cc
tests/heuristic/: CMakeLists.txt  heuristic_2v2_test.cc  heuristic_bot_test.cc
tests/model/: CMakeLists.txt  inference_test.cc  init_test.cc  model_test.cc  trainer_test.cc
tests/self_play/: CMakeLists.txt  batch_manager_test.cc  coordinator_test.cc  integration_test.cc  queue_test.cc  trajectory_2v2_test.cc  trajectory_test.cc  worker_test.cc
tests/solver/: CMakeLists.txt  dice_state_test.cc  dp_tables_monotonicity_test.cc  dp_tables_test.cc  hold_mask_test.cc  mc_bot_test.cc  middle_dp_test.cc  score_table_test.cc  softmax_test.cc  solver_request_test.cc  solver_resolve_test.cc  transition_test.cc
tests/training/: CMakeLists.txt  logging_test.cc  replay_buffer_test.cc  training_loop_2v2_test.cc  training_loop_test.cc
tests/ui/: CMakeLists.txt  game_recorder_test.cc  json_test.cc  session_manager_test.cc
(+29 files in other folders)
